Feature/email (#19)
* feat: Implement user email verification resend and password reset functionalities with custom Keycloak email themes.

* feat: Redesign Keycloak email templates with inline styles and add new login flow pages.

* feat: Implement Keycloak email verification with new themes and JWT parsing.

* feat: add Docker Compose for MySQL, enhance Swagger API documentation and tooling.

* chore: delete validate-theme.sh script
